--- a/css/styles.css
+++ b/css/styles.css
@@ -163,9 +163,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
-#brett-weisberg-card {
-  background-image: url("https://www.facebook.com/photo.php?fbid=3598188748415&set=a.1354783824694.2058155.1084381108&type=3&theater");
+#brett-weisberg-cover {
+ background-image: url("https://imgur.com/gallery/IYcCMoW");
 }
+
+#brett-weisberg-card {
+  background-image: url("https://imgur.com/gallery/12zOz3C/comment/1401552299");
+}
+
 
 .view-profile-div {
   position: absolute;
