--- a/css/styles.css
+++ b/css/styles.css
@@ -164,11 +164,11 @@ a:visited {
 }
 
 #brett-weisberg-cover {
- background-image: url("https://imgur.com/gallery/IYcCMoW");
+ background-image: url("https://i.imgur.com/WhOR1rD.jpg");
 }
 
 #brett-weisberg-card {
-  background-image: url("https://imgur.com/gallery/12zOz3C/comment/1401552299");
+  background-image: url("https://i.imgur.com/032OF0o.jpg");
 }
 
 
