--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,7 @@ a:visited {
 }
 
 .profile-photo {
- background-image: url("https://i.imgur.com/WhOR1rD.jpg");
+ background-image: url("https://i.imgur.com/032OF0o.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
